Issue #28653: Fix a refleak in functools.lru_cache.